@@ -18,7 +18,8 @@ NEWS:
 NEW: [features/enhancements]
 
 BUG FIXES:
-+Fix copying from OutputBuffer
++Fix copying from OutputBuffer.
++Fix some error handling if file session handling.
 +Fix some minor translation issues.
 
 #-----------------------------------------------------------------------------#
